--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.13.5",
     "draft-js": "^0.11.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.7.4"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.12",
